--- a/youaintgotnostyle.css
+++ b/youaintgotnostyle.css
@@ -58,8 +58,58 @@ h1 {
   max-width: 760px;
 }
 
-.button {
+.button-dsk {
   display: inline-block;
+  position: relative;
+  text-transform: uppercase;
+  font-size: 0.8rem;
+  background: blue;
+  border-radius: 2rem;
+  width: 18rem;
+  height: 3rem;
+  margin-top: 3rem;
+  font-weight: 600;
+  letter-spacing: 2px;
+  overflow: hidden;
+  -webkit-transition: all 300ms;
+  transition: all 300ms;
+}
+
+.button-dsk .text-1, .button-dsk .text-2 {
+  -webkit-transition: all 400ms ease;
+  transition: all 400ms ease;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+}
+
+.button-dsk .text-2 {
+  -webkit-transform: translate(-50%, 100%);
+          transform: translate(-50%, 100%);
+  opacity: 0;
+}
+
+.button-dsk:hover {
+  -webkit-box-shadow: 0 2px 10px blue;
+          box-shadow: 0 2px 10px blue;
+}
+
+.button-dsk:hover .text-1 {
+  -webkit-transform: translate(-50%, -200%);
+          transform: translate(-50%, -200%);
+  opacity: 0;
+}
+
+.button-dsk:hover .text-2 {
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  opacity: 1;
+}
+
+.button-mbl {
+  display: none;
   position: relative;
   text-transform: uppercase;
   font-size: 0.8rem;
@@ -77,17 +127,39 @@ h1 {
   transition: box-shadow 300ms ease, -webkit-box-shadow 300ms ease;
 }
 
-.button:hover {
+.button-mbl:hover {
   -webkit-box-shadow: 0 2px 10px blue;
           box-shadow: 0 2px 10px blue;
 }
 
-@media (max-width: 600px) {
+footer {
+  position: fixed;
+  bottom: 0;
+  right: 0;
+  font-size: 0.8rem;
+  margin: 1rem 1.6rem;
+}
+
+footer a {
+  color: blue;
+}
+
+footer a:hover {
+  text-shadow: 0 0 3px blue;
+}
+
+@media (max-width: 700px) {
   body {
     font-size: 14px;
   }
   .hero-inner {
-    padding: 2rem 1.6rem;
+    padding: 2.4rem;
+  }
+  .button-dsk {
+    display: none;
+  }
+  .button-mbl {
+    display: inline-block;
   }
 }
 /*# sourceMappingURL=youaintgotnostyle.css.map */
