--- a/youaintgotnostyle.scss
+++ b/youaintgotnostyle.scss
@@ -42,8 +42,47 @@ h1 {
     max-width: 760px;
 }
 
-.button {
+.button-dsk {
     display: inline-block;
+    position: relative;
+    text-transform: uppercase;
+    font-size: 0.8rem;
+    background: blue;
+    border-radius: 2rem;
+    width: 18rem;
+    height: 3rem;
+    margin-top: 3rem;
+    font-weight: 600;
+    letter-spacing: 2px;
+    overflow: hidden;
+    transition: all 300ms;
+    .text-1, .text-2 {
+        transition: all 400ms ease;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+    }
+    .text-2 {
+        transform: translate(-50%, 100%);
+        opacity: 0;
+    }
+
+    &:hover {
+        box-shadow: 0 2px 10px blue;
+        .text-1 {
+            transform: translate(-50%, -200%);
+            opacity: 0;
+        }
+        .text-2 {
+            transform: translate(-50%, -50%);
+            opacity: 1;
+        }
+    }
+}
+
+.button-mbl {
+    display: none;
     position: relative;
     text-transform: uppercase;
     font-size: 0.8rem;
@@ -61,51 +100,37 @@ h1 {
     }
 }
 
-// .button {
-//     display: inline-block;
-//     position: relative;
-//     text-transform: uppercase;
-//     font-size: 0.8rem;
-//     background: blue;
-//     border-radius: 2rem;
-//     width: 18rem;
-//     height: 3rem;
-//     margin-top: 3rem;
-//     font-weight: 600;
-//     letter-spacing: 2px;
-//     overflow: hidden;
-//     transition: all 300ms;
-//     .text-1, .text-2 {
-//         transition: all 400ms ease;
-//         position: absolute;
-//         top: 50%;
-//         left: 50%;
-//         transform: translate(-50%, -50%);
-//     }
-//     .text-2 {
-//         transform: translate(-50%, 100%);
-//         opacity: 0;
-//     }
+footer {
+    position: fixed;
+    bottom: 0;
+    right: 0;
+    // transform: translateX(-50%);
+    font-size: 0.8rem;
+    margin: 1rem 1.6rem;
+    a {
+        color: blue;
+        &:hover {
+            text-shadow: 0 0 3px blue;
+        }
+    }
+}
 
-//     &:hover {
-//         box-shadow: 0 2px 10px blue;
-//         .text-1 {
-//             transform: translate(-50%, -200%);
-//             opacity: 0;
-//         }
-//         .text-2 {
-//             transform: translate(-50%, -50%);
-//             opacity: 1;
-//         }
-//     }
-// }
 
-@media (max-width: 600px) {
+@media (max-width: 700px) {
     body {
         font-size: 14px;
     }
 
     .hero-inner {
-        padding: 2rem 1.6rem;
+        padding: 2.4rem;
     }
+
+    .button-dsk {
+        display: none;
+    }
+
+    .button-mbl {
+        display: inline-block;
+    }
+
 }
