--- a/youaintgotnostyle.css
+++ b/youaintgotnostyle.css
@@ -58,26 +58,54 @@ h1 {
   max-width: 760px;
 }
 
+@-webkit-keyframes button-appear {
+  0% {
+    opacity: 0;
+  }
+  30% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@keyframes button-appear {
+  0% {
+    opacity: 0;
+  }
+  30% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
 .button-dsk {
   display: inline-block;
   position: relative;
   text-transform: uppercase;
   font-size: 0.8rem;
   background: blue;
-  border-radius: 2rem;
+  border-radius: 3rem;
   width: 18rem;
   height: 3rem;
   margin-top: 3rem;
   font-weight: 600;
   letter-spacing: 2px;
   overflow: hidden;
-  -webkit-transition: all 300ms;
-  transition: all 300ms;
+  -webkit-animation-name: button-appear;
+          animation-name: button-appear;
+  -webkit-animation-duration: 900ms;
+          animation-duration: 900ms;
+  -webkit-animation-iteration-count: 1;
+          animation-iteration-count: 1;
 }
 
 .button-dsk .text-1, .button-dsk .text-2 {
-  -webkit-transition: all 400ms ease;
-  transition: all 400ms ease;
+  -webkit-transition: all 300ms ease;
+  transition: all 300ms ease;
   position: absolute;
   top: 50%;
   left: 50%;
@@ -125,11 +153,6 @@ h1 {
   transition: -webkit-box-shadow 300ms ease;
   transition: box-shadow 300ms ease;
   transition: box-shadow 300ms ease, -webkit-box-shadow 300ms ease;
-}
-
-.button-mbl:hover {
-  -webkit-box-shadow: 0 2px 10px blue;
-          box-shadow: 0 2px 10px blue;
 }
 
 footer {
