--- a/youaintgotnostyle.scss
+++ b/youaintgotnostyle.scss
@@ -42,22 +42,34 @@ h1 {
     max-width: 760px;
 }
 
+@keyframes button-appear {
+    0% { opacity: 0 }
+    30% { opacity: 0 }
+    100% { opacity: 1}
+}
 .button-dsk {
     display: inline-block;
     position: relative;
     text-transform: uppercase;
     font-size: 0.8rem;
     background: blue;
-    border-radius: 2rem;
+    border-radius: 3rem;
     width: 18rem;
     height: 3rem;
     margin-top: 3rem;
     font-weight: 600;
     letter-spacing: 2px;
     overflow: hidden;
-    transition: all 300ms;
+    animation-name: button-appear;
+    // animation-timing-function: 300ms;
+    // transition: translate opacity 300ms;
+    // opacity: 0;
+    animation-duration: 900ms;
+    animation-iteration-count: 1;
+    // animation-fill-mode: forward;
+    // animation-delay: 1s;
     .text-1, .text-2 {
-        transition: all 400ms ease;
+        transition: all 300ms ease;
         position: absolute;
         top: 50%;
         left: 50%;
@@ -95,9 +107,6 @@ h1 {
     text-align: center;
     line-height: 1.2;
     transition: box-shadow 300ms ease;
-    &:hover {
-        box-shadow: 0 2px 10px blue;
-    }
 }
 
 footer {
