--- a/youaintgotnostyle.css
+++ b/youaintgotnostyle.css
@@ -19,13 +19,12 @@ a {
 }
 
 h1 {
-  font-size: calc(4vmin + 1rem);
+  font-size: 3rem;
   line-height: 1.1;
   font-weight: 200;
   margin: 0 0 2rem 0;
   -webkit-animation: variable-font-warp 5s infinite alternate;
           animation: variable-font-warp 5s infinite alternate;
-  /* font-size: calc(3vw + 1rem); */
 }
 
 @-webkit-keyframes variable-font-warp {
@@ -50,12 +49,21 @@ h1 {
   background: -webkit-gradient(linear, left top, left bottom, from(#007991), to(#02b4d8));
   background: linear-gradient(#007991, #02b4d8);
   min-height: 70vh;
-  /* padding: 1rem; */
+  padding: 7rem 0;
 }
 
-.hero-inner {
-  padding: 12vmin 5rem 2rem 5rem;
-  max-width: 760px;
+.container {
+  margin: 0 auto;
+  width: 80%;
+  max-width: 1200px;
+}
+
+.hero__text {
+  width: 561%;
+}
+
+.hero__text p {
+  margin-bottom: 3em;
 }
 
 @-webkit-keyframes button-appear {
@@ -82,18 +90,22 @@ h1 {
   }
 }
 
-.button-dsk {
+.button {
   display: inline-block;
   position: relative;
   text-transform: uppercase;
   font-size: 0.8rem;
   background: blue;
   border-radius: 3rem;
-  width: 18rem;
-  height: 3rem;
-  margin-top: 3rem;
   font-weight: 600;
   letter-spacing: 2px;
+  text-align: center;
+  line-height: 1.2;
+}
+
+.dsk {
+  width: 18rem;
+  height: 3rem;
   overflow: hidden;
   -webkit-animation-name: button-appear;
           animation-name: button-appear;
@@ -103,7 +115,7 @@ h1 {
           animation-iteration-count: 1;
 }
 
-.button-dsk .text-1, .button-dsk .text-2 {
+.dsk .text-1, .dsk .text-2 {
   -webkit-transition: all 300ms ease;
   transition: all 300ms ease;
   position: absolute;
@@ -113,42 +125,32 @@ h1 {
           transform: translate(-50%, -50%);
 }
 
-.button-dsk .text-2 {
+.dsk .text-2 {
   -webkit-transform: translate(-50%, 100%);
           transform: translate(-50%, 100%);
   opacity: 0;
 }
 
-.button-dsk:hover {
+.dsk:hover {
   -webkit-box-shadow: 0 2px 10px blue;
           box-shadow: 0 2px 10px blue;
 }
 
-.button-dsk:hover .text-1 {
+.dsk:hover .text-1 {
   -webkit-transform: translate(-50%, -200%);
           transform: translate(-50%, -200%);
   opacity: 0;
 }
 
-.button-dsk:hover .text-2 {
+.dsk:hover .text-2 {
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
   opacity: 1;
 }
 
-.button-mbl {
+.mbl {
   display: none;
-  position: relative;
-  text-transform: uppercase;
-  font-size: 0.8rem;
-  background: blue;
-  border-radius: 3rem;
-  padding: 1rem 2.2rem;
-  margin-top: 2rem;
-  font-weight: 600;
-  letter-spacing: 2px;
-  text-align: center;
-  line-height: 1.2;
+  padding: 1em 2.2em;
   -webkit-transition: -webkit-box-shadow 300ms ease;
   transition: -webkit-box-shadow 300ms ease;
   transition: box-shadow 300ms ease;
@@ -171,17 +173,24 @@ footer a:hover {
   text-shadow: 0 0 3px blue;
 }
 
-@media (max-width: 700px) {
+@media (max-width: 780px) {
   body {
     font-size: 14px;
   }
-  .hero-inner {
-    padding: 2.4rem;
+  .hero {
+    padding: 4rem 0;
+    min-height: auto;
   }
-  .button-dsk {
+  .hero__text {
+    width: 90%;
+  }
+  h1 {
+    font-size: 2.2rem;
+  }
+  .dsk {
     display: none;
   }
-  .button-mbl {
+  .mbl {
     display: inline-block;
   }
 }
