--- a/youaintgotnostyle.scss
+++ b/youaintgotnostyle.scss
@@ -1,16 +1,74 @@
 /* To request a range of a variable font axis, join the 2 values with .. */
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@200..900&display=swap');
 
-* { box-sizing: border-box; }
+*, *::before, *::after { box-sizing: border-box; }
+
+:root {
+    --dark-blue: #007991;
+    --light-blue: #02b4d8;
+    --dark-grey: #1c1c1c;
+    --light-grey: #969696;
+}
+body::-webkit-scrollbar {
+    width: 0.5rem;
+}
+body::-webkit-scrollbar-track {
+    background: white;
+}
+body::-webkit-scrollbar-thumb {
+    background: var(--dark-blue);
+}
+.navbar {
+    z-index: 666;
+    background: var(--dark-grey);
+    position: fixed;
+}
+.navbar-nav {
+    height: 100%;
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.nav-item {
+    width : 100%;
+    transition: background 300ms ease;
+    &:hover {
+        background: #000;
+        .nav-link svg {
+            color: var(--light-blue);
+
+        }
+    }
+}
+.nav-item:last-child {
+    margin-top: auto;
+}
+.nav-link {
+    display: flex;
+    align-items: center;
+    height: 5rem;
+    color: var(--light-grey);
+    svg {
+        min-width: 2rem;
+        margin: 0 1.5rem;
+    }
+}
+.link-text {
+    display: none;
+    margin-left: 1rem;
+
+}
 
 body { 
     font-family: Inter, sans-serif;
-    color: whitesmoke;
+    color: #1c1c1c;
     margin: 0;
     font-size: 18px;
     line-height: 1.8;
 }
-
 a {
     text-decoration: none;
     color: whitesmoke;
@@ -30,22 +88,27 @@ h1 {
 }
 
 .hero {
-    background: linear-gradient( #007991,  #02b4d8 );
+    background: linear-gradient(var(--dark-blue), var(--light-blue));
     min-height: 70vh;
     padding: 7rem 0;
 }
 
 .container {
     margin: 0 auto;
-    width: 80%;
-    max-width: 1200px;
+    width: 60%;
+    max-width: 1000px;
 }
 
 .hero__text {
-    width: 56%;
+    color: whitesmoke;
+    width: 70%;
     p {
         margin-bottom: 3em;
     }
+}
+.body__text {
+    width: 80%;
+    padding: 2rem 0;
 }
 
 
@@ -118,19 +181,62 @@ footer {
     }
 }
 
-
+@media (min-width: 780px) {
+    .navbar {
+        top: 0;
+        width: 5rem;
+        height: 100vh;
+        transition: all 300ms ease;
+        .arrow svg {
+            transition: transform 300ms ease;
+            transform: rotate(0);
+        }
+        &:hover {
+            width: 25%;
+            box-shadow: 0 0 20px var(--dark-grey) ;
+            .link-text {
+                display: block;
+            }
+            .arrow svg {
+                transform: rotate(-180deg);
+            }
+        }
+    }
+}
 @media (max-width: 780px) {
     body {
         font-size: 14px;
     }
-
+    .navbar {
+        left: 0;
+        bottom: 0;
+        width: 100%;
+        height: 5rem;
+    }
+    .navbar-nav {
+        flex-direction: row;
+        svg {
+            max-height: 2rem;
+        }
+    }
+    .nav-link {
+        justify-content: center;
+    }
+    .arrow {
+        display: none;
+    }
+    .container {
+        width: 80%;
+    }
     .hero {
         padding: 4rem 0;
         min-height: auto;
     }
-
-    .hero__text {
+    .hero__text, .body__text {
         width: 90%;
+    }
+    .body__text {
+        margin-bottom: 5rem;
     }
 
     h1 {
