--- a/youaintgotnostyle.scss
+++ b/youaintgotnostyle.scss
@@ -18,55 +18,12 @@ body::-webkit-scrollbar-track {
 body::-webkit-scrollbar-thumb {
     background: var(--dark-blue);
 }
-.navbar {
-    z-index: 666;
-    background: var(--dark-grey);
-    position: fixed;
-}
-.navbar-nav {
-    height: 100%;
-    list-style: none;
-    padding: 0;
-    margin: 0;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-.nav-item {
-    width : 100%;
-    transition: background 300ms ease;
-    &:hover {
-        background: #000;
-        .nav-link svg {
-            color: var(--light-blue);
-
-        }
-    }
-}
-.nav-item:last-child {
-    margin-top: auto;
-}
-.nav-link {
-    display: flex;
-    align-items: center;
-    height: 5rem;
-    color: var(--light-grey);
-    svg {
-        min-width: 2rem;
-        margin: 0 1.5rem;
-    }
-}
-.link-text {
-    display: none;
-    margin-left: 1rem;
-
-}
 
 body { 
     font-family: Inter, sans-serif;
     color: #1c1c1c;
     margin: 0;
-    font-size: 18px;
+    font-size: 16px;
     line-height: 1.8;
 }
 a {
@@ -87,36 +44,106 @@ h1 {
     100% { font-weight: 400;}
 }
 
+h2 {
+    margin: 0.4rem 0;
+    letter-spacing: 1px;
+}
+p {
+    margin: 0.4rem 0
+}
+
+// ? NAVBAR STYLING HERE
+// .navbar {
+//     z-index: 666;
+//     background: var(--dark-grey);
+//     position: fixed;
+// }
+// .navbar-nav {
+//     height: 100%;
+//     list-style: none;
+//     padding: 0;
+//     margin: 0;
+//     display: flex;
+//     flex-direction: column;
+//     align-items: center;
+// }
+// .nav-item {
+//     width : 100%;
+//     transition: background 300ms ease;
+//     &:hover {
+//         background: #000;
+//         .nav-link svg {
+//             color: var(--light-blue);
+
+//         }
+//     }
+// }
+// .nav-item:last-child {
+//     margin-top: auto;
+// }
+// .nav-link {
+//     display: flex;
+//     align-items: center;
+//     height: 5rem;
+//     color: var(--light-grey);
+//     svg {
+//         min-width: 2rem;
+//         margin: 0 1.5rem;
+//     }
+// }
+// .link-text {
+//     display: none;
+//     margin-left: 1rem;
+// }
+
 .hero {
     background: linear-gradient(var(--dark-blue), var(--light-blue));
-    min-height: 70vh;
+    // min-height: 70vh;
     padding: 7rem 0;
 }
 
 .container {
     margin: 0 auto;
-    width: 60%;
+    width: 80%;
     max-width: 1000px;
 }
 
 .hero__text {
     color: whitesmoke;
-    width: 70%;
+    width: 65%;
     p {
         margin-bottom: 3em;
     }
 }
-.body__text {
-    width: 80%;
-    padding: 2rem 0;
+
+.flexbox {
+    // width: 90%;
+    padding: 5rem 0 6rem 0;
+    display: flex;
+    text-align: center;
+
+    &__title--color {
+        color: var(--light-blue);
+    }
 }
 
+.section--color {
+    background: var(--dark-blue);
+    color: white;
+}
 
+// ?CSS COMBINATOR selects an adjacent sibling with the same class v
+.flexbox__text + .flexbox__text {
+    margin-left: 2rem;
+}
+
+// ? BUTTON STYLING HERE
 @keyframes button-appear {
     0% { opacity: 0 }
     30% { opacity: 0 }
     100% { opacity: 1}
 }
+
 .button {
     display: inline-block;
     position: relative;
@@ -164,7 +191,6 @@ h1 {
 .mbl {
     display: none;
     padding: 1em 2.2em;
-    transition: box-shadow 300ms ease;
 }
 
 footer {
@@ -181,50 +207,51 @@ footer {
     }
 }
 
-@media (min-width: 780px) {
-    .navbar {
-        top: 0;
-        width: 5rem;
-        height: 100vh;
-        transition: all 300ms ease;
-        .arrow svg {
-            transition: transform 300ms ease;
-            transform: rotate(0);
-        }
-        &:hover {
-            width: 20%;
-            box-shadow: 0 0 20px var(--dark-grey) ;
-            .link-text {
-                display: block;
-            }
-            .arrow svg {
-                transform: rotate(-180deg);
-            }
-        }
-    }
-}
+// @media (min-width: 780px) {
+//     .navbar {
+//         top: 0;
+//         width: 5rem;
+//         height: 100vh;
+//         transition: width 300ms ease;
+//         .arrow svg {
+//             transition: transform 300ms ease;
+//             transform: rotate(0);
+//         }
+//         &:hover {
+//             width: 20%;
+//             box-shadow: 0 0 20px var(--dark-grey) ;
+//             .link-text {
+//                 display: block;
+//             }
+//             .arrow svg {
+//                 transform: rotate(-180deg);
+//             }
+//         }
+//     }
+// }
+
 @media (max-width: 780px) {
     body {
         font-size: 14px;
     }
-    .navbar {
-        left: 0;
-        bottom: 0;
-        width: 100%;
-        height: 5rem;
-    }
-    .navbar-nav {
-        flex-direction: row;
-        svg {
-            max-height: 2rem;
-        }
-    }
-    .nav-link {
-        justify-content: center;
-    }
-    .arrow {
-        display: none;
-    }
+    // .navbar {
+    //     left: 0;
+    //     bottom: 0;
+    //     width: 100%;
+    //     height: 5rem;
+    // }
+    // .navbar-nav {
+    //     flex-direction: row;
+    //     svg {
+    //         max-height: 2rem;
+    //     }
+    // }
+    // .nav-link {
+    //     justify-content: center;
+    // }
+    // .arrow {
+    //     display: none;
+    // }
     .container {
         width: 80%;
     }
@@ -232,15 +259,27 @@ footer {
         padding: 4rem 0;
         min-height: auto;
     }
-    .hero__text, .body__text {
+    .hero__text {
         width: 90%;
-    }
-    .body__text {
-        margin-bottom: 5rem;
     }
 
     h1 {
         font-size: 2.2rem;
+    }
+
+    .flexbox {
+        flex-direction: column;
+        padding: 3rem 0;
+        align-items: flex-start;
+    }
+
+    .flexbox__text {
+        text-align: left;
+        margin: 1rem 0;
+    }
+
+    .flexbox__text + .flexbox__text {
+        margin-left: 0;
     }
 
     .dsk {
