--- a/youaintgotnostyle.css
+++ b/youaintgotnostyle.css
@@ -1,5 +1,6 @@
 /* To request a range of a variable font axis, join the 2 values with .. */
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@200..900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Public+Sans:wght@200..900&display=swap");
 *, *::before, *::after {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
@@ -10,6 +11,16 @@
   --light-blue: #02b4d8;
   --dark-grey: #1c1c1c;
   --light-grey: #969696;
+}
+
+body::-moz-selection {
+  color: var(--light-grey);
+  background: var(--dark-blue);
+}
+
+body::selection {
+  color: var(--light-grey);
+  background: var(--dark-blue);
 }
 
 body::-webkit-scrollbar {
@@ -38,17 +49,18 @@ a {
 }
 
 h1 {
-  font-size: 3rem;
+  font-family: 'Public Sans', sans-serif;
+  font-size: 3.2rem;
   line-height: 1.1;
   font-weight: 200;
-  margin: 0 0 2rem 0;
-  -webkit-animation: variable-font-warp 5s infinite alternate;
-          animation: variable-font-warp 5s infinite alternate;
+  margin: 0 0 2.2rem 0;
+  -webkit-animation: variable-font-warp 4s infinite alternate;
+          animation: variable-font-warp 4s infinite alternate;
 }
 
 @-webkit-keyframes variable-font-warp {
   0% {
-    font-weight: 800;
+    font-weight: 900;
   }
   100% {
     font-weight: 400;
@@ -57,7 +69,7 @@ h1 {
 
 @keyframes variable-font-warp {
   0% {
-    font-weight: 800;
+    font-weight: 900;
   }
   100% {
     font-weight: 400;
@@ -65,54 +77,119 @@ h1 {
 }
 
 h2 {
-  margin: 0.4rem 0;
+  font-family: 'Public Sans', sans-serif;
+  font-weight: 700;
+  line-height: 1.45;
+  margin: 0.8rem 0;
   letter-spacing: 1px;
+  -webkit-transition: font-weight 500ms ease;
+  transition: font-weight 500ms ease;
 }
 
 p {
-  margin: 0.4rem 0;
+  margin: 0.8rem 0;
+}
+
+img {
+  max-width: 100%;
+  pointer-events: none;
+}
+
+.container {
+  margin: 0 auto;
+  padding: 6rem 0;
+  width: 80%;
+  max-width: 940px;
 }
 
 .hero {
   background: -webkit-gradient(linear, left top, left bottom, from(var(--dark-blue)), to(var(--light-blue)));
   background: linear-gradient(var(--dark-blue), var(--light-blue));
-  padding: 7rem 0;
-}
-
-.container {
-  margin: 0 auto;
-  width: 80%;
-  max-width: 1000px;
 }
 
 .hero__text {
   color: whitesmoke;
-  width: 65%;
+  width: 60%;
 }
 
 .hero__text p {
+  font-size: 1.1rem;
   margin-bottom: 3em;
 }
 
+.hero__img {
+  -ms-flex-item-align: end;
+      align-self: flex-end;
+  width: 40%;
+  mix-blend-mode: screen;
+}
+
+.hero p {
+  max-width: 75%;
+}
+
 .flexbox {
-  padding: 5rem 0 6rem 0;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.flexbox__text {
   text-align: center;
+  width: 100%;
+}
+
+.flexbox__text:hover h2 {
+  font-weight: 900;
 }
 
 .flexbox__title--color {
   color: var(--light-blue);
 }
 
+.flexbox__text + .flexbox__text {
+  margin-left: 2rem;
+}
+
 .section--color {
-  background: var(--dark-blue);
+  background: -webkit-gradient(linear, left top, left bottom, from(var(--light-blue)), to(var(--dark-blue)));
+  background: linear-gradient(var(--light-blue), var(--dark-blue));
   color: white;
 }
 
-.flexbox__text + .flexbox__text {
-  margin-left: 2rem;
+.flexbox2 {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.flexbox2__main {
+  width: 50%;
+}
+
+.flexbox2__aside {
+  width: 40%;
+  background: -webkit-gradient(linear, left top, left bottom, from(var(--light-blue)), to(var(--dark-blue)));
+  background: linear-gradient(var(--light-blue), var(--dark-blue));
+  color: white;
+  text-align: center;
+  padding: 2.6rem;
+  -webkit-box-shadow: 10px 10px 0 blue;
+          box-shadow: 10px 10px 0 blue;
+}
+
+.flexbox2__aside-text:hover h2 {
+  font-weight: 900;
+}
+
+.flexbox2__aside-text + .flexbox2__aside-text {
+  margin-top: 3rem;
 }
 
 @-webkit-keyframes button-appear {
@@ -140,6 +217,10 @@ p {
 }
 
 .button {
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
   display: inline-block;
   position: relative;
   text-transform: uppercase;
@@ -153,7 +234,7 @@ p {
 }
 
 .dsk {
-  width: 18rem;
+  width: 20rem;
   height: 3rem;
   overflow: hidden;
   -webkit-animation-name: button-appear;
@@ -204,43 +285,59 @@ p {
 
 footer {
   position: fixed;
-  bottom: 0;
+  bottom: 50%;
   right: 0;
+  -webkit-transform: rotate(-90deg) translateY(450%);
+          transform: rotate(-90deg) translateY(450%);
   font-size: 0.8rem;
-  margin: 1rem 1.6rem;
 }
 
 footer a {
   color: blue;
+  border-bottom: 1px solid transparent;
+  -webkit-transition: border 300ms ease;
+  transition: border 300ms ease;
 }
 
 footer a:hover {
-  text-shadow: 0 0 3px blue;
+  border-bottom: 1px solid blue;
 }
 
-@media (max-width: 780px) {
+footer .active {
+  pointer-events: none;
+  border-bottom: 1px solid blue;
+}
+
+@media (max-width: 840px) {
   body {
     font-size: 14px;
   }
   .container {
     width: 80%;
+    max-width: 400px;
+    padding: 3rem 0;
   }
   .hero {
-    padding: 4rem 0;
     min-height: auto;
   }
   .hero__text {
     width: 90%;
   }
+  .hero__text p {
+    font-size: 1rem;
+    line-height: 1.6;
+  }
+  .hero__img {
+    display: none;
+  }
   h1 {
-    font-size: 2.2rem;
+    font-size: 2rem;
   }
   .flexbox {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
-    padding: 3rem 0;
     -webkit-box-align: start;
         -ms-flex-align: start;
             align-items: flex-start;
@@ -252,11 +349,28 @@ footer a:hover {
   .flexbox__text + .flexbox__text {
     margin-left: 0;
   }
+  .flexbox2 {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .flexbox2__main, .flexbox2__aside {
+    width: 100%;
+    margin-bottom: 1rem;
+  }
   .dsk {
     display: none;
   }
   .mbl {
     display: inline-block;
+  }
+  footer {
+    position: relative;
+    -webkit-transform: rotate(0) translateY(0);
+            transform: rotate(0) translateY(0);
+    text-align: center;
+    margin: 0.6rem 0;
   }
 }
 /*# sourceMappingURL=youaintgotnostyle.css.map */
