Align items baseline test

--- a/youaintgotnostyle.css
+++ b/youaintgotnostyle.css
@@ -167,6 +167,9 @@ img {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  -webkit-box-align: baseline;
+      -ms-flex-align: baseline;
+          align-items: baseline;
 }
 
 .flexbox2__main {
