--- a/youaintgotnostyle.scss
+++ b/youaintgotnostyle.scss
@@ -184,6 +184,7 @@ img {
 .flexbox2 {
     display: flex;
     justify-content: space-between;
+    align-items: baseline;
 
     &__main {
         width: 50%;
