--- a/youaintgotnostyle.css
+++ b/youaintgotnostyle.css
@@ -11,16 +11,17 @@
   --light-blue: #02b4d8;
   --dark-grey: #1c1c1c;
   --light-grey: #969696;
+  --lighter-grey: #e9e9e9;
 }
 
-body::-moz-selection {
-  color: var(--light-grey);
-  background: var(--dark-blue);
+::-moz-selection {
+  color: var(--dark-grey);
+  background: var(--light-blue);
 }
 
-body::selection {
-  color: var(--light-grey);
-  background: var(--dark-blue);
+::selection {
+  color: var(--dark-grey);
+  background: var(--light-blue);
 }
 
 body::-webkit-scrollbar {
@@ -28,14 +29,19 @@ body::-webkit-scrollbar {
 }
 
 body::-webkit-scrollbar-track {
-  background: white;
+  background: var(--lighter-grey);
 }
 
 body::-webkit-scrollbar-thumb {
   background: var(--dark-blue);
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
+  scroll-behavior: smooth;
   font-family: Inter, sans-serif;
   color: #1c1c1c;
   margin: 0;
@@ -60,7 +66,7 @@ h1 {
 
 @-webkit-keyframes variable-font-warp {
   0% {
-    font-weight: 900;
+    font-weight: 800;
   }
   100% {
     font-weight: 400;
@@ -69,7 +75,7 @@ h1 {
 
 @keyframes variable-font-warp {
   0% {
-    font-weight: 900;
+    font-weight: 800;
   }
   100% {
     font-weight: 400;
@@ -103,27 +109,54 @@ ul {
 }
 
 header {
-  background: white;
-  padding: 0.6rem 1rem 0.7rem 1rem;
+  z-index: 2000;
+  background: var(--lighter-grey);
+  padding: 0.6rem 0 0.7rem 0;
   border-bottom: 1px solid blue;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+}
+
+header .header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+header .logo {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  max-width: 40px;
+}
+
+header svg {
+  width: 100%;
+  color: blue;
+  margin-right: 0.8rem;
 }
 
 .nav {
-  margin: 0 auto;
-  width: 80%;
-  max-width: 940px;
-}
-
-.nav__list {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
 }
 
-.nav__main, .nav__subscribe {
+.nav__list--primary, .nav__list--secondary {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -139,7 +172,7 @@ header {
 }
 
 .nav__link:hover {
-  opacity: 0.7;
+  opacity: 0.6;
 }
 
 .nav__link--button {
@@ -148,14 +181,26 @@ header {
   color: white;
   border-radius: 1.4rem;
   padding: 0.6rem 0.8rem;
-  margin-left: 0.8rem;
+  margin-left: 0.4rem;
+}
+
+.nav svg {
+  max-width: 30px;
+  color: blue;
 }
 
 .container {
   margin: 0 auto;
-  padding: 6rem 0;
   width: 80%;
   max-width: 940px;
+}
+
+.padding-vertical {
+  padding: 6rem 0;
+}
+
+.margin-top {
+  margin-top: 2rem;
 }
 
 .hero {
@@ -346,8 +391,8 @@ footer {
   position: fixed;
   bottom: 50%;
   right: 0;
-  -webkit-transform: rotate(-90deg) translateY(400%);
-          transform: rotate(-90deg) translateY(400%);
+  -webkit-transform: rotate(-90deg) translateY(490%);
+          transform: rotate(-90deg) translateY(490%);
   font-size: 0.8rem;
 }
 
@@ -394,6 +439,8 @@ footer .active {
   .container {
     width: 80%;
     max-width: 400px;
+  }
+  .padding-vertical {
     padding: 3rem 0;
   }
   .hero {
@@ -415,7 +462,7 @@ footer .active {
   }
   h2 {
     font-size: 1.6rem;
-    line-height: 1.4;
+    line-height: 1.2;
   }
   .flexbox {
     -webkit-box-orient: vertical;
