Flexbox 4 Challenge DONE!

--- a/flexbox4.scss
+++ b/flexbox4.scss
@@ -48,7 +48,7 @@ a {
     color: whitesmoke;
 }
 
-h1, h2, {
+h1, h2 {
     font-family: Public Sans, Arial, Helvetica, sans-serif;
     margin: 0;
 }
