--- a/flexbox4.css
+++ b/flexbox4.css
@@ -209,12 +209,13 @@ footer .active {
   border-bottom: 1px solid red;
 }
 
-@media (max-width: 840px) {
+@media (max-width: 900px) {
   body {
     font-size: 14px;
   }
   h3 {
     font-size: 1.6rem;
+    margin-bottom: 0.6rem;
     text-align: left;
   }
   h4 {
@@ -248,6 +249,15 @@ footer .active {
             transform: rotate(0) translateY(0);
     text-align: center;
     margin: 0.6rem 0;
+  }
+}
+
+@media (min-width: 1800px) {
+  .container {
+    max-width: 1100px;
+  }
+  .hero__title {
+    font-size: 11rem;
   }
 }
 /*# sourceMappingURL=flexbox4.css.map */
