--- a/flexbox4.scss
+++ b/flexbox4.scss
@@ -55,7 +55,7 @@ h1, h2 {
 
 h3 {
     margin-top: 0.4rem;
-    // margin-bottom: 1.4rem;
+    // margin-bottom: 0.6rem;
     font-family: Public Sans, Arial, Helvetica, sans-serif;
     font-size: 2.4rem;
     font-weight: 600;
@@ -125,7 +125,6 @@ img {
 
 section {
     padding: 6rem 2rem;
-    // background-color: whitesmoke;
 }
 
 .section {
@@ -181,7 +180,7 @@ footer {
     }
 }
 
-@media (max-width: 840px) {
+@media (max-width: 900px) {
 
     body {
         font-size: 14px;
@@ -189,6 +188,7 @@ footer {
 
     h3 {
         font-size: 1.6rem;
+        margin-bottom: 0.6rem;
         text-align: left;
     }
     h4 {
@@ -225,5 +225,14 @@ footer {
         transform: rotate(0) translateY(0);
         text-align: center;
         margin: 0.6rem 0;
+    }
+}
+
+@media (min-width: 1800px) {
+    .container {
+        max-width: 1100px;
+    }
+    .hero__title {
+        font-size: 11rem;
     }
 }
